# qaguru-15

./: pyproject.toml
pages/: home_page.py
tests/: conftest.py  test_fixtures.py  test_parametrize.py  test_skip.py
